# Assignment2_RT1

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: project.launch.py  project_cpp.launch.py
scripts/: controller_node.py  monitoring_node.py
src/: controller_node.cpp  monitoring_node.cpp
src/exam_package/: package.xml  setup.cfg  setup.py
srv/: GetVelocity.srv
